--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 /* CSS rule for container displaying full height image */
 body, html {
   height: 100%;
-}.\
+}
+
 #header-image {
 	height: 100%;
 	
